// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Root Dependencies with each other in peerDependencies throws 1`] = `"Probable circular references in peerDependencies. Unqualified peers are 'broken-peer-1@1.0.0', 'broken-peer-2@1.0.0'"`;

exports[`Root Dependency with dependency with peerDependency with peerDependency on Root 1`] = `
Object {
  "react": "react @ 16.0.0",
  "react-redux": Object {
    "react": "react @ 16.0.0",
    "redux": "redux @ 2.0.0",
    "stamp": "cmVhY3QtcmVkdXhANS4wLjB7cmVhY3RAMTYuMC4we30scmVkdXhAMi4wLjB9L2luZGV4Lmpz",
  },
  "react-redux-plugin-deep": Object {
    "react-redux-plugin": Object {
      "react-redux": Object {
        "react": "react @ 16.0.0",
        "redux": "redux @ 2.0.0",
        "stamp": "cmVhY3QtcmVkdXhANS4wLjB7cmVhY3RAMTYuMC4we30scmVkdXhAMi4wLjB9L2luZGV4Lmpz",
      },
    },
  },
  "redux": "redux @ 2.0.0",
}
`;

exports[`Root Dependency with dependency with peerDependency with peerDependency on Root 2`] = `
Array [
  Array [
    "Peer dependency 'react-redux@5.0.0' of 'react-redux-plugin@1.0.0' doesn’t satisfy version range '0.0.0'",
  ],
]
`;

exports[`Root Dependency with peerDependency with peerDependencies on Root 1`] = `
Object {
  "react": "react @ 16.0.0",
  "react-redux": Object {
    "react": "react @ 16.0.0",
    "redux": "redux @ 3.0.0",
    "stamp": "cmVhY3QtcmVkdXhANS4wLjB7cmVhY3RAMTYuMC4we30scmVkdXhAMy4wLjB9L2luZGV4Lmpz",
  },
  "react-redux-plugin": Object {
    "react-redux": Object {
      "react": "react @ 16.0.0",
      "redux": "redux @ 3.0.0",
      "stamp": "cmVhY3QtcmVkdXhANS4wLjB7cmVhY3RAMTYuMC4we30scmVkdXhAMy4wLjB9L2luZGV4Lmpz",
    },
  },
  "redux": "redux @ 3.0.0",
}
`;

exports[`Root Dependency with peerDependency with peerDependencies on Root 2`] = `
Array [
  Array [
    "Peer dependency 'react-redux@5.0.0' of 'react-redux-plugin@1.0.0' doesn’t satisfy version range '0.0.0'",
  ],
]
`;

exports[`Simple peer dependencies 1`] = `
Object {
  "rr": Object {
    "react": "react @ 15.0.0",
    "redux": "redux @ 2.0.0",
    "stamp": "cmVhY3QtcmVkdXhANS4wLjB7cmVhY3RAMTUuMC4we30scmVkdXhAMi4wLjB9L2luZGV4Lmpz",
  },
}
`;

exports[`Simple peer dependencies 2`] = `Array []`;
